test_yuriiq/catalog/language/german/account/address.php
<?php

// text
$_['text_update']	= 'Adresse erfolgreich geändert';
$_['text_account']	= 'Konto';
$_['text_insert']	= 'Adresse erfolgreich hinzugefügt';
$_['text_delete']	= 'Adresse erfolgreich gelöscht';
$_['text_edit_address']	= 'Adresse bearbeiten';
$_['text_address_book']	= 'Adressbucheinträge';

// error
$_['error_default']	= 'Die Standardadresse kann nicht gelöscht werden!';
$_['error_country']	= 'Bitte ein Land wählen!';
$_['error_delete']	= 'Es muss mindestens eine Adresse angegeben werden!';
$_['error_vat']	= 'Umsatzsteuer-Identifikationsnummer ist ungültig!';
$_['error_tax_id']	= 'Steuer-ID erforderlich!';
$_['error_firstname']	= 'Vorname muss zwischen 1 und 32 Zeichen lang sein!';
$_['error_city']	= 'Stadt muss zwischen 2 und 128 Zeichen lang sein!';
$_['error_postcode']	= 'Postleitzahl muss zwischen 2 und 10 Zeichen lang sein.';
$_['error_company']	= 'Erfordert den Namen des Unternehmens!';
$_['error_lastname']	= 'Nachname muss zwischen 1 und 32 Zeichen lang sein!';
$_['error_address_1']	= 'Adresszeile 1 muss zwischen 3 und 128 Zeichen lang sein!';
$_['error_zone']	= 'Bitte ein Bundesland wählen!';
$_['error_company_id']	= 'Firmen-ID erforderlich!';

// entry
$_['entry_firstname']	= 'Vorname:';
$_['entry_default']	= 'Standardadresse:';
$_['entry_city']	= 'Stadt:';
$_['entry_postcode']	= 'Postleitzahl:';
$_['entry_address_1']	= 'Adresszeile:';
$_['entry_address_2']	= 'Adresszeile 2:';
$_['entry_company_id']	= 'Firmen-ID:';
$_['entry_tax_id']	= 'Steuer-ID:';
$_['entry_zone']	= 'Bundesland:';
$_['entry_lastname']	= 'Nachname:';
$_['entry_company']	= 'Firma:';
$_['entry_country']	= 'Land:';

// heading
$_['heading_title']	= 'Adressbuch';
